--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>Lofsdalen</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -21,6 +21,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -31,6 +32,63 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="twelve columns">
+          <h4>Logo</h4>
+          <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content!</p>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <section id="hero">
+    <div class="container">
+          <div class="row">
+            <div class="one-half column">
+              <h4 class="hero-heading">Stop coding non-responsive sites. Let users view sites from anywhere.</h4>
+              <a class="button button-primary" href="http://getskeleton.com">Try Skeleton</a>
+            </div>
+            <div class="one-half column phones">
+              <img class="phone" src="images/iphone.png">
+              <img class="phone" src="images/iphone.png">
+            </div>
+          </div>
+        </div>
+  </section>
+
+  <div class="section values">
+    <div class="container">
+      <div class="row">
+        <div class="one-third column value">
+          <h2 class="value-multiplier">67%</h2>
+          <h5 class="value-heading">Purchase Increase</h5>
+          <p class="value-description">Percentage of users more likely to purchase on mobile friendly site.</p>
+        </div>
+        <div class="one-third column value">
+          <h2 class="value-multiplier">90%</h2>
+          <h5 class="value-heading">Multi-device Users</h5>
+          <p class="value-description">Most of the world accesses the internet on multiple devices.</p>
+        </div>
+        <div class="one-third column value">
+          <h2 class="value-multiplier">66%</h2>
+          <h5 class="value-heading">Sad Users</h5>
+          <p class="value-description">Percentage of users that are frustrated with page load times.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <section id="help">
+    <div class="container">
+      <h3 class="section-heading">Need help getting started?</h3>
+      <p class="section-description">Skeleton is an amazingly easy place to start with responsive development. If you want to learn more, just visit the documentation!</p>
+      <a class="button button-primary" href="http://getskeleton.com">View Skeleton Docs</a>
+    </div>
+  </section>
+
+
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
@@ -39,6 +97,23 @@
       </div>
     </div>
   </div>
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="one-third column">
+          <h4>Basic Page</h4>
+        </div>
+        <div class="one-third column">
+          <h4>Basic Page</h4>
+        </div>
+        <div class="one-third column">
+          <h4>Basic Page</h4>
+        </div>
+      </div>
+    </div>
+
+  </footer>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
